trunk/Archive2/b1/c8909af768df06/output
main.cpp:1:3: error: invalid preprocessing directive #Include
 # Include <iostream> 
   ^
main.cpp:2:18: fatal error: nuevo: No such file or directory
 # include <nuevo>
                  ^
compilation terminated.
